[project]
name = "niiotrace"
version = "0.1.0"
description = "Python wrapper for NI IO Trace programmatic API (NiSpyLog.dll)"
readme = "README.md"
authors = [
    { name = "Karsten van Zwol", email = "karsten.van.zwol@gmail.com" }
]
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
niiotrace = "niiotrace.__cli__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
]
