[project]
name = "nitrace"
version = "0.1.0"
description = "Python wrapper for NI IO Trace programmatic API (NiSpyLog.dll)"
readme = "README.md"
authors = [
    { name = "Karsten van Zwol", email = "karsten.van.zwol@gmail.com" }
]
requires-python = ">=3.10"
license = "MIT"
dependencies = []
keywords = ["ni", "national-instruments", "io-trace", "nitrace", "tracing", "test-automation"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "Operating System :: Microsoft :: Windows",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Scientific/Engineering",
    "Topic :: Software Development :: Testing",
    "Topic :: System :: Logging",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/ktvanzwol/nitrace"
Repository = "https://github.com/ktvanzwol/nitrace"
Issues = "https://github.com/ktvanzwol/nitrace/issues"

[build-system]
requires = ["uv_build>=0.11.6,<0.12.0"]
build-backend = "uv_build"

[project.scripts]
nitrace = "nitrace.__cli__:main"

[dependency-groups]
dev = [
    "pytest>=9.0.3",
    "pytest-cov>=7.1.0",
    "ruff>=0.11.0",
]

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
markers = [
    "system: tests that require NI IO Trace to be installed",
]

[tool.ruff.format]

[tool.ruff.lint]
select = ["E", "F", "I"]

[tool.coverage.run]
source = ["nitrace"]

[tool.coverage.report]
omit = ["tests/*"]
